CHANGES IN VERSION 1.2.7
------------------------
 o fixed in generate mixed and un-mixed table <2014-11-26, Wed>

CHANGES IN VERSION 1.2.5
------------------------
 o remove X or - in comparison <2014-11-24, Mon>

CHANGES IN VERSION 1.2.4
------------------------
 o add pmlToSeq function <2014-11-24, Mon>

CHANGES IN VERSION 1.2.3
------------------------
 o print verbose information in treeAnno.pml <2014-11-23, Sun>

CHANGES IN VERSION 1.2.2
------------------------
 o treeAnno.pml for annotating tree of substitution in nodes with pml tree as input <2014-11-22, Sat>
 o add outfile in addKeywrodFASTA <2014-11-22, Sat>
 o use get_skleid.R within the package for updating <2014-11-22, Sat>
 o matrix2vector.phyDat: convert phyDat object from matrix to vector format <2014-11-21, Fri>
 o add man files of tree annotation functions <2014-11-21, Fri>
 o add tree annotation functions <2014-11-21, Fri>
   + main function of annotating tree
   + netNglyc related functions
 
CHANGES IN VERSION 1.2.0
------------------------
 o add some eye candy, print cartoon when function exit <2014-11-21, Fri>
 o add verbose information in generateGapFile function <2014-11-21, Fri>

CHANGES IN VERSION 1.1.5
------------------------
 o import readBStringSet for compatible of X or N  and other characters
   in DNA sequence <2014-11-20, Thu>

CHANGES IN VERSION 1.1.4
------------------------
 o fixed mising mixed in generateGaps <2014-11-20, Thu>

CHANGES IN VERSION 1.1.2
------------------------
 o add update_skleid <2014-11-20, Thu>

CHANGES IN VERSION 1.1.1
------------------------
 o add 'Gaps:' in gap range <2014-10-13, Thu>
 o cowsay done... <2014-10-10, Mon>
 o addKeywordFASTA function <2014-10-05, Wed>

CHANGES IN VERSION 1.1.0
------------------------
 o alignment sequence generated in alignment folder and add link in the report <2014-10-29, Wed>
 o bug fixed in doAlign <2014-10-29, Wed>

CHANGES IN VERSION 1.0.1
------------------------