@@ -5,6 +5,7 @@ export(autoReport)
 export(autoTranslate)
 export(doAlign)
 export(doAlign2)
+export(fas2phy)
 export(generateGapFile)
 export(getConsensus)
 export(pmlToSeq)
@@ -22,10 +23,14 @@ export(writeAlignedSeq)
 export(writeConsensus)
 importFrom(Biostrings,DNAStringSet)
 importFrom(Biostrings,GENETIC_CODE)
+importFrom(Biostrings,readAAMultipleAlignment)
 importFrom(Biostrings,readBStringSet)
+importFrom(Biostrings,readDNAMultipleAlignment)
 importFrom(Biostrings,readDNAStringSet)
+importFrom(Biostrings,readRNAMultipleAlignment)
 importFrom(Biostrings,toString)
 importFrom(Biostrings,translate)
+importFrom(Biostrings,write.phylip)
 importFrom(Biostrings,writeXStringSet)
 importFrom(RCurl,getURL)
 importFrom(ape,plot.phylo)
